# ProwsWebsite

./: README.md  db.sqlite3  manage.py  pyproject.toml
core/: urls.py
core/templates/core/: index.html
core/templates/layouts/: base.html  base_notion.html  footer.html  navbar.html  navbar_notion.html  testimonials.html
notion/: urls.py  views.py
notion/templates/notion/: index.html
prowswebsite/: asgi.py  settings.py  urls.py  wsgi.py
theme/static/js/: index.js
theme/static_src/src/: styles.css
theme/templates/: base.html
