[tool.poetry]
name = "prowswebsite"
version = "0.1.0"
description = ""
authors = ["Prows-developmente <prowebstruct@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
django-tailwind = "^3.8.0"
gunicorn = "^23.0.0"
django-browser-reload = "^1.18.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
